[package]
name = "password-generator"
version = "1.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.2", features = ["derive"] }
csv = "1.2.2"
itertools = "0.10.5"
passwords = "3.1.13"
serde = { version = "1.0.163", features = ["derive"] }
